# nix_gh_scraper

./: .gitignore  README.md  input_file.json  main.py  pyproject.toml  requirements.txt
gh_scraper/: log.py  schemas.py  scrapers.py
nix_scraper/: log.py  parsers.py  schemas.py  scrapers.py  serializers.py  utils.py
src/: log.py  parsers.py  schemas.py
