[project]
name = "nix-gh-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "curl-cffi>=0.10.0",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "pydantic>=2.11.4",
    "pytest-asyncio>=0.26.0",
]
